# lamjav

./: .dockerignore  .dockerignore.pdf-processor  .gitignore  .sqlfluff  .sqlfluffignore  .user.yml  Dockerfile  Dockerfile.exclude-staging  Dockerfile.pdf-processor  Dockerfile.staging  NOVA_PIPELINE.md  README.md  cursor_transformar_json_em_parquet_com.md  dbt_project.yml  docker-compose.pdf-processor.yml  docker-compose.yml  odds.json  package-lock.yml  packages.yml  profiles.yml  pyproject.toml  requirements.txt  requirements_cloud_run.txt  requirements_dbt.txt  requirements_depara.txt  requirements_injury_extractor.txt  requirements_odds.txt  requirements_raw_injury_report.txt  workflow.yml  workflow_custom.yml  workflow_optimized.yml  workflow_parallelized_examples.yml
bi_dev/: de_para_nba_injury_players.py  de_para_nba_odds_players.py  de_para_players.py  main_exampe.py
config/: prod.yaml
injuryreport_dev/etl/: pdfviz.py
injuryreport_dev/landing/: current_injury_report.py  historical_injury_reports.py  injury_report_extractor.py  main_example.py  run_all_example.py  specific_injury_report.py
injuryreport_dev/raw/: raw_injury_report.py  raw_injury_report_backfill.py
lib_dev/: balldontlie.py  fuzzystringmatch.py  injuryreport.py  pdfextractor.py  pdfextractor_simple.py  smartbetting.py  theoddsapi.py  utils.py
models/marts/: b2b_games.sql  dim_player_shooting_by_zones.sql  dim_player_stat_line_perf.sql  dim_players.sql  dim_prop_player.sql  dim_teams.sql  ft_game_player_stats.sql  ft_player_stat_over_line.sql  injury_insights.sql  models.yml  prop_player.sql  team_rating.sql
nba_dev/etl/: convert_all_json_to_ndjson.py  convert_json_to_ndjson.py
nba_dev/external_tables/: raw_active_players.sql  raw_game_player_stats.sql  raw_games.sql  raw_leaders.sql  raw_season_averages.sql  raw_season_averages_general_advanced.sql  raw_season_averages_general_base.sql  raw_season_averages_shooting_by_zone.sql  raw_team_standings.sql  raw_teams.sql
nba_dev/landing/: [OLD] players.py  active_players.py  advanced_stats.py  game_player_stats.py  games.py  leaders.py  main_example.py  player_injuries.py  players.py  season_averages.py  team_standings.py  teams.py
nba_dev/old/: leaders.py  player_injuries.py  teams.py
odds_dev/etl/: check_api_key.py  extract_current_event_ids.py  extract_event_ids.py  resume_historical_event_odds.py
odds_dev/external_tables/: raw_event_odds.sql  (+1 more)
seeds/: raw_local_time_arenas.csv  raw_local_time_arenas.csv.yml
src/: main.py
(+38 files in other folders)
