[project]
name = "lamjav"
version = "0.1.0"
description = ""
authors = [
    {name = "Mateus Kasuya",email = "mateusvbkasuya@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "balldontlie (>=0.1.6,<0.2.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "google-cloud-storage (>=3.2.0,<4.0.0)",
    "requests (>=2.32.4,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.14.1"
ruff = "^0.12.2"

[tool.taskipy.tasks]
fix = "ruff check . --fix"
run = "poetry run python"
format = "ruff format ."
